--- a/lettera.html
+++ b/lettera.html
@@ -21,7 +21,9 @@
     <div class="main--content">
   <div class="lettre">
     <h1>A</h1>
-    <p>L'abricot est le fruit d'un arbre généralement de petite taille appelé abricotier, de la famille des <i>Rosaceae</i>. Le nom scientifique de l'abricotier est<i> Prunus armeniaca</i> (prune d'Arménie). Il appartient au sous-genre des <i>Prunus</i>, section Armeniaca avec les quatre autres abricotiers du monde.</p>
+    <p>"abricot", "d'abricot" (invariable)<br>
+<i>de l'arabe al-barqoûq, "le fruit précoce"</i><br>
+De la couleur de la peau d'un abricot, d'un orange doux et légèrement rosé.</p>
     </div>
     <div class="illu">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 748.11 675.31" class="abricot"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:6px;}</style></defs><path class="cls-1" d="M478.79,253c24.25,31.82,97,381.82-171.21,404.55C253,678.73,121.22,698.43,45.46,575.7S-50,66.61,354.55,160.55c33.34,9.09-10.6,16.67-28.79,25.76s-40.9,16.66-42.42,48.48c-12.37,4.18-24.22,9.12-26.19,28.86s5.92,32.57,21.71,37.51S344,387,334.14,465s-12.83,100.68-16.78,113.52-.55,18.33,4.47,4.28,28.59-97.82,21.57-151-18.56-101.33-40.64-120.39-8-24.08-4-35.62,4-42.64-1-44.15-6.53-8,4-17.05S346.41,183,356.94,185s.5,14.55,8,21.57,59.49,32.76,112,30.3,157.41-17.22,180.37-55.75,36.9-74.61,58.21-85.27,44.28-21.32,20.5-32S626.16,25.34,598.28,13,454.8-29.59,361.33,120.45c-8.2,16.39-8.2,35.25,9,36.07S622.06,87.65,686,81.91c12.29-.82,12.41,3.14-62.31,16.4C602.74,102,447.36,145,432.6,150.7"/></svg>
