--- a/letterm.html
+++ b/letterm.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr" >
   <head>
     <meta charset="utf-8">
-    <title>B comme bleu roi</title>
+    <title>M comme mauve</title>
     <link rel="stylesheet" href="css/masterletter.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
 
-  <body style="background-color:#4169E1">
+  <body style="background-color:#D473D4">
     <header>
       <div class="logo" onclick="location.href='abc.html'" style=cursor:pointer;>
         <div class="text-logo">
@@ -20,16 +20,16 @@
       </header>
     <div class="main--content">
   <div class="lettre">
-    <h1>B</h1>
-    <p>Le bleu roi est un bleu soutenu assez caractéristique.<br> Il était dédié aux uniformes de la garde rapprochée du roi à partir de 1563 avant de s’étendre à la Garde Nationale.<p>
+    <h1>M</h1>
+    <p>Violet pâle, de la couleur des fleurs de la plante de même nom. <p>
     </div>
     <div class="illu">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 247.47 168.91"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="abricot" d="M96.24,166.36c-31.67-.53-83.73-8.21-92.7-20.58-1.5-4.23-.45-3.62.45-4.23s-1.8-3.16-.75-4.52,1.36-6,.45-6.78-2.26-4.82.91-5c-.15-3.46,0-25.91,0-27.87-3-2.56-6.93-12.65-1.06-17.62-.15-6.93,3.32-59.65,3.62-62.37S6.56,9.59,7.91,7s2.26-3.31,3.32-3,.45,9.79-.31,11.14-.75,51.37,5.88,51.07c2.56-.15,20.35-22.38,23.46-38.6s6.22-12.44,6.44-13.78S39.37,1.19,50,.52s3.11,12.22,2.66,12.89,1.56,1.33,2,3.11S56.7,47,65.81,54.73s16.44,7.78,24,5.78,24-19.33,24.89-31.33.88-17.77,5.11-17.77c-2.89-5.33-2.67-10.89,4-10.89S130,9.41,128.24,11s1.77.44,2.44,4.88S140.23,51,146.45,55.62,164,66.29,176.89,58.07s13.77-42.44,16.44-42.88,1.78-1.34-.44-5.11-.23-8.89,4.22-8a6.51,6.51,0,0,1,4.44,9.55c-2,4,.89,2.89,1.78,4.67s8.88,54.21,23.77,52.87S237.32,23,237.76,21.41a2.4,2.4,0,0,1,3.78-1.11c1.11,1.11,2.44,59.54,2.44,62.43,2.23,2.22,3.34,7.1,2.89,10.66s-1.11,5.33-2.89,6.66c.23,6.67-1.11,25.77-.22,27.77s2.67,2,1.78,4.67A33,33,0,0,0,244,146.93c.67,7.33-60,25.39-136.48,20.71-3.18,0-1.24-4.06,5.12-3.7s105.6,1.64,128.7-16.27c1.51-1.51,1.18-2.85-1.34-1.34s-28.21,15.51-132.09,14S3.79,135.68,5.78,135.39s13.1,7.12,23.34,8.54,68,10,115.84,8.25,78.27-4.83,95.92-14.51c2.89-1.71,2.89-6.79-.67-4.93S186.38,147,117.9,146.5s-107.49-13-110.76-16.79,1.36-4.91,5.45-3.28,42.76,16,118.24,13.49,101.7-8.42,108.87-12.48c2.64-1.76,3.29-26.89,3.29-31.13s.81-22.52-2.29-19.75S229.61,81,224.64,53.69s-4.13-29.23-7.72-29.78c.28-3.31,4.14-8.83,1.1-12.14S207.27,6.26,208.1,14s4.41,8,3.31,10.48-5.52,23.16-8,32.26-10.48,30.34-26.48,31.17S135.84,62.79,133.64,44s-5.75-17-7.22-17.13-.88-4.13,1.18-4.57,5-12.73-3.35-12.57-11,8.46-5.26,13.88c1.43,1.76,1.75,4,.16,4s-4.15-1-5.59,12.92S94.26,83,87.08,84.43,67.78,91.29,56.3,80.6,39.55,49,40,41,41,25.09,38.27,24s-1.85-3.7-.62-3.95,3.45-2.34,2.47-6.9-3.21-5.79-5.18-5A6.23,6.23,0,0,0,31.12,16c1.48,4.43,1.48,6.77.5,7.39s-4.07,1.11-4.44,7.14S21.59,73.1,13.41,76.28c0,0-11.52,13.35-3.68,8.42s9.18-12.53,11.64-11.86.67,8.73-3.8,11.86,2.91,29.56,11.64,28.66,11-15.9,6.49-19.93-13-7.61-12.54,8.51S34.82,112,36.48,110.73s16.74-8.65,21.89-7.36,22.81,19.68,29.25,17.48,25-24.66,34.59-24.66,12.88,9.39,12.14,14.54-4.23,9.56-11.22,9.56-12-4.78-11.77-12.69,8.09-13.25,14-13.62,31.09,6.08,39.92,12.33,19.69,14,23.37,13.8,9-4.23,8.09-9.75,12.36-20.46,19.83-18.8,10.23,11.9,7.19,18.26-5.53,5.53-9.13,4.7-6.08-6.91-5.25-13.28,8.57-12.44,12.17-11.61,12.44,6.63,14.1,9.12"/></svg>
-      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 142.67 138.96"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M80.23,82.11c-7.73,0-12.61,3.26-17.08,3.26s-12.2,3.25-19.52,2-21.56-1.63-28.47-1.63S.11,86.18.51,84.55s11.8,0,9.36-3.66S1.73,75.2,1.73,70.32s2.45-5.7,11-5.7,14.64-1.22,24.4-.81,21.55,3.25,27.25,7.73S68.25,74.8,70.06,76s3.83,1.61,5,1.21,8.86,5.43,9.66,3.22S85,76,82.14,74.6,79.32,75,78.92,71s-7.25-6-10.06-3.42-5.64,7.24-1.61,9a57.16,57.16,0,0,0,9.45,3.22c2.82.81,8.25,1.82,5.44,3.43s-4.83,5.23-10.87,5-19.92,10.46-21.33,16.5S44.5,117.67,44.1,123.1s-4.22,10.27-.6,10.67,9.26-.6,14.09-.4,4.83-.61,5,2.81,6.24,3,6.24-1.4-1.61-5.24-1.21-11.07S76.91,94.53,79.92,90.9s6.24-11.07,6.85-7.85S94,92.71,97,96.54s11.67,4.83,16.9,7.44,11.88,3.83,11.88.21-4.23-8,.4-8.66,11.58-.92,14.1-5.65,3.16-7.9-2.52-11.69-26.85-9.47-36.64-6-13.58,10.74-12.63,5a16.8,16.8,0,0,1,7.58-12c4.11-2.84,29.05-25.26,28.42-32.53s1-16.42-2.52-13.89-4.42,6.63-4.42.94.63-11-2.22-12.94-8.52-3.16-11-1.58S89.15,21,88.2,33.34s-1.57,25.59-1.57,31.59-2.53,12.31-3.79,6-11.37-37.59-13-44.22S61.36.5,57.89.5,51.57,7.13,51.57,10s-3.16,6.32-3.16,1.58-6-7.58-6-3.15,0,13.26,1.9,18.94S54.73,47.56,59.47,53.56s5.68,8.21,5.68,8.21"/></svg>
+    </div>
 </div>
   </body>
   <footer>
-    <a href="lettera.html"> ← lettre précédente </a> <a href="letterc.html">lettre suivante →</a>
+    <a href="letterl.html"> ← lettre précédente </a> <a href="lettern.html">lettre suivante →</a>
     </footer>
 
 </html>
