--- a/letterq.html
+++ b/letterq.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr" >
   <head>
     <meta charset="utf-8">
-    <title>B comme bleu roi</title>
+    <title>Q comme queue-de-renard</title>
     <link rel="stylesheet" href="css/masterletter.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
 
-  <body style="background-color:#4169E1">
+  <body style="background-color:#91283B">
     <header>
       <div class="logo" onclick="location.href='abc.html'" style=cursor:pointer;>
         <div class="text-logo">
@@ -20,16 +20,16 @@
       </header>
     <div class="main--content">
   <div class="lettre">
-    <h1>B</h1>
-    <p>Le bleu roi est un bleu soutenu assez caractéristique.<br> Il était dédié aux uniformes de la garde rapprochée du roi à partir de 1563 avant de s’étendre à la Garde Nationale.<p>
+    <h1 class="light">Q</h1>
+    <p class="light">Le « queue-de-renard » est une couleur. C'est un rouge qui rappelle la couleur des fleurs de l'amarante queue-de-renard (plante).</p>
     </div>
     <div class="illu">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 247.47 168.91"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="abricot" d="M96.24,166.36c-31.67-.53-83.73-8.21-92.7-20.58-1.5-4.23-.45-3.62.45-4.23s-1.8-3.16-.75-4.52,1.36-6,.45-6.78-2.26-4.82.91-5c-.15-3.46,0-25.91,0-27.87-3-2.56-6.93-12.65-1.06-17.62-.15-6.93,3.32-59.65,3.62-62.37S6.56,9.59,7.91,7s2.26-3.31,3.32-3,.45,9.79-.31,11.14-.75,51.37,5.88,51.07c2.56-.15,20.35-22.38,23.46-38.6s6.22-12.44,6.44-13.78S39.37,1.19,50,.52s3.11,12.22,2.66,12.89,1.56,1.33,2,3.11S56.7,47,65.81,54.73s16.44,7.78,24,5.78,24-19.33,24.89-31.33.88-17.77,5.11-17.77c-2.89-5.33-2.67-10.89,4-10.89S130,9.41,128.24,11s1.77.44,2.44,4.88S140.23,51,146.45,55.62,164,66.29,176.89,58.07s13.77-42.44,16.44-42.88,1.78-1.34-.44-5.11-.23-8.89,4.22-8a6.51,6.51,0,0,1,4.44,9.55c-2,4,.89,2.89,1.78,4.67s8.88,54.21,23.77,52.87S237.32,23,237.76,21.41a2.4,2.4,0,0,1,3.78-1.11c1.11,1.11,2.44,59.54,2.44,62.43,2.23,2.22,3.34,7.1,2.89,10.66s-1.11,5.33-2.89,6.66c.23,6.67-1.11,25.77-.22,27.77s2.67,2,1.78,4.67A33,33,0,0,0,244,146.93c.67,7.33-60,25.39-136.48,20.71-3.18,0-1.24-4.06,5.12-3.7s105.6,1.64,128.7-16.27c1.51-1.51,1.18-2.85-1.34-1.34s-28.21,15.51-132.09,14S3.79,135.68,5.78,135.39s13.1,7.12,23.34,8.54,68,10,115.84,8.25,78.27-4.83,95.92-14.51c2.89-1.71,2.89-6.79-.67-4.93S186.38,147,117.9,146.5s-107.49-13-110.76-16.79,1.36-4.91,5.45-3.28,42.76,16,118.24,13.49,101.7-8.42,108.87-12.48c2.64-1.76,3.29-26.89,3.29-31.13s.81-22.52-2.29-19.75S229.61,81,224.64,53.69s-4.13-29.23-7.72-29.78c.28-3.31,4.14-8.83,1.1-12.14S207.27,6.26,208.1,14s4.41,8,3.31,10.48-5.52,23.16-8,32.26-10.48,30.34-26.48,31.17S135.84,62.79,133.64,44s-5.75-17-7.22-17.13-.88-4.13,1.18-4.57,5-12.73-3.35-12.57-11,8.46-5.26,13.88c1.43,1.76,1.75,4,.16,4s-4.15-1-5.59,12.92S94.26,83,87.08,84.43,67.78,91.29,56.3,80.6,39.55,49,40,41,41,25.09,38.27,24s-1.85-3.7-.62-3.95,3.45-2.34,2.47-6.9-3.21-5.79-5.18-5A6.23,6.23,0,0,0,31.12,16c1.48,4.43,1.48,6.77.5,7.39s-4.07,1.11-4.44,7.14S21.59,73.1,13.41,76.28c0,0-11.52,13.35-3.68,8.42s9.18-12.53,11.64-11.86.67,8.73-3.8,11.86,2.91,29.56,11.64,28.66,11-15.9,6.49-19.93-13-7.61-12.54,8.51S34.82,112,36.48,110.73s16.74-8.65,21.89-7.36,22.81,19.68,29.25,17.48,25-24.66,34.59-24.66,12.88,9.39,12.14,14.54-4.23,9.56-11.22,9.56-12-4.78-11.77-12.69,8.09-13.25,14-13.62,31.09,6.08,39.92,12.33,19.69,14,23.37,13.8,9-4.23,8.09-9.75,12.36-20.46,19.83-18.8,10.23,11.9,7.19,18.26-5.53,5.53-9.13,4.7-6.08-6.91-5.25-13.28,8.57-12.44,12.17-11.61,12.44,6.63,14.1,9.12"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 217.86 155.88"><defs><style>.draw{fill:none;stroke:#FFF;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M21.1,118.92C14.09,107,3.56,83.44,6.68,82.27s10.72-3.51,17.54,0,8.89,8,12.44,8.45,9.23.24,10.53-2.13-.83-2.13-4.14-1.77-5.09.83-6.74.23,2.11-.79,3.31-1.29.5-1.4-2-1.5-4.5-2.1-3.5-4.8,2.8-3.7,5.7-3.9,6.61.7,5.71,4.1-4.51,3.7-3,3.7,5.2-.8,5.1-3.2-2.2-5.2-.5-4.2,5,6.2,5.3,2.7,2.6-11.8.7-13.6-5.7-3.7-4.9-4.8-.8-2.9.6-4,3.1-3.1,5.7-3.4a8.2,8.2,0,0,1,5.4,1.6c-2.6,2.4-2.3,3.1-5.3,3.5s-7.4,1.2-9.5.4-10.51,0-14.21-2.9-5.8-3.2-7.7-2.1-2,1.2-1.2,1.7-.5,3.1,4.4,3,3.82-2.69,4.9-.1,1.77,6.8-.54,7.75-2,5.57.41,7.61-3.4,1.9-3.54,4.35,1.63,6.12-1.09,4.21-11.41-5.3-20.79-1.22S2.09,56.73,3.59,54.15A14.44,14.44,0,0,0,5.22,43.28c-1.09-4.63-3-15-2.58-17.68S-.9,4.26,1.82,2.49,7.4,0,12.83,3.72s13.06,13.18,18.36,14,8.29,6.12,15.63,1.09S65.58,1.13,69.93,1s5.58-1.91,7.34,2.17,1.5,5.44,2.18,7.61S79,21.25,78.77,24.24s1.09,8,.54,11.56-2,9.92,2.31,11.83,8.3,7.2,6.53,17.4,3.12,17-8.29,17.26-16.45,4.22-16.59,7.48.95-2.58,5.71-3.94,9.65-2.59,14-2.45,8.43-.27,7.34-7.34-.62-16.73,1.11-18.81,10.4-2.25,13.86-2.6,15.59-3.29,25.64-2.77,20.79,5.72,32.22,6.06,20.45,2.77,30.49,13.17,14.9,28.41,17.67,39.85,12.48,23.21-.69,31.53-29.8,11.08-45,9.35-23.56,2.43-36.73,2.77S71.68,157.36,53,151.47s-20.1-2.07-24.95-8-10.74-24.94,6.24-34.64,21.83-8.32,37.07-8,18.37-3.12,27.72-3.47,13.52,0,27.38-1,21.48,1.39,31.87,7.28,8,14.55,15.25,13.51,24.6,4.16,20.09-4.16"/></svg>
       </div>
 </div>
   </body>
   <footer>
-    <a href="lettera.html"> ← lettre précédente </a> <a href="letterc.html">lettre suivante →</a>
+    <a href="letterp.html" class="light"> ← lettre précédente </a> <a href="letterr.html" class="light">lettre suivante →</a>
     </footer>
 
 </html>
