--- a/letters.html
+++ b/letters.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr" >
   <head>
     <meta charset="utf-8">
-    <title>B comme bleu roi</title>
+    <title>J comme safran</title>
     <link rel="stylesheet" href="css/masterletter.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
 
-  <body style="background-color:#4169E1">
+  <body style="background-color:#f4c430">
     <header>
       <div class="logo" onclick="location.href='abc.html'" style=cursor:pointer;>
         <div class="text-logo">
@@ -20,16 +20,18 @@
       </header>
     <div class="main--content">
   <div class="lettre">
-    <h1>B</h1>
-    <p>Le bleu roi est un bleu soutenu assez caractéristique.<br> Il était dédié aux uniformes de la garde rapprochée du roi à partir de 1563 avant de s’étendre à la Garde Nationale.<p>
+    <h1>S</h1>
+    <p>
+Safran est un nom de couleur en usage dans l'habillement et la décoration, désignant une teinte jaune orangé d'après celle de l'épice safran.</p>
     </div>
     <div class="illu">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 247.47 168.91"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="abricot" d="M96.24,166.36c-31.67-.53-83.73-8.21-92.7-20.58-1.5-4.23-.45-3.62.45-4.23s-1.8-3.16-.75-4.52,1.36-6,.45-6.78-2.26-4.82.91-5c-.15-3.46,0-25.91,0-27.87-3-2.56-6.93-12.65-1.06-17.62-.15-6.93,3.32-59.65,3.62-62.37S6.56,9.59,7.91,7s2.26-3.31,3.32-3,.45,9.79-.31,11.14-.75,51.37,5.88,51.07c2.56-.15,20.35-22.38,23.46-38.6s6.22-12.44,6.44-13.78S39.37,1.19,50,.52s3.11,12.22,2.66,12.89,1.56,1.33,2,3.11S56.7,47,65.81,54.73s16.44,7.78,24,5.78,24-19.33,24.89-31.33.88-17.77,5.11-17.77c-2.89-5.33-2.67-10.89,4-10.89S130,9.41,128.24,11s1.77.44,2.44,4.88S140.23,51,146.45,55.62,164,66.29,176.89,58.07s13.77-42.44,16.44-42.88,1.78-1.34-.44-5.11-.23-8.89,4.22-8a6.51,6.51,0,0,1,4.44,9.55c-2,4,.89,2.89,1.78,4.67s8.88,54.21,23.77,52.87S237.32,23,237.76,21.41a2.4,2.4,0,0,1,3.78-1.11c1.11,1.11,2.44,59.54,2.44,62.43,2.23,2.22,3.34,7.1,2.89,10.66s-1.11,5.33-2.89,6.66c.23,6.67-1.11,25.77-.22,27.77s2.67,2,1.78,4.67A33,33,0,0,0,244,146.93c.67,7.33-60,25.39-136.48,20.71-3.18,0-1.24-4.06,5.12-3.7s105.6,1.64,128.7-16.27c1.51-1.51,1.18-2.85-1.34-1.34s-28.21,15.51-132.09,14S3.79,135.68,5.78,135.39s13.1,7.12,23.34,8.54,68,10,115.84,8.25,78.27-4.83,95.92-14.51c2.89-1.71,2.89-6.79-.67-4.93S186.38,147,117.9,146.5s-107.49-13-110.76-16.79,1.36-4.91,5.45-3.28,42.76,16,118.24,13.49,101.7-8.42,108.87-12.48c2.64-1.76,3.29-26.89,3.29-31.13s.81-22.52-2.29-19.75S229.61,81,224.64,53.69s-4.13-29.23-7.72-29.78c.28-3.31,4.14-8.83,1.1-12.14S207.27,6.26,208.1,14s4.41,8,3.31,10.48-5.52,23.16-8,32.26-10.48,30.34-26.48,31.17S135.84,62.79,133.64,44s-5.75-17-7.22-17.13-.88-4.13,1.18-4.57,5-12.73-3.35-12.57-11,8.46-5.26,13.88c1.43,1.76,1.75,4,.16,4s-4.15-1-5.59,12.92S94.26,83,87.08,84.43,67.78,91.29,56.3,80.6,39.55,49,40,41,41,25.09,38.27,24s-1.85-3.7-.62-3.95,3.45-2.34,2.47-6.9-3.21-5.79-5.18-5A6.23,6.23,0,0,0,31.12,16c1.48,4.43,1.48,6.77.5,7.39s-4.07,1.11-4.44,7.14S21.59,73.1,13.41,76.28c0,0-11.52,13.35-3.68,8.42s9.18-12.53,11.64-11.86.67,8.73-3.8,11.86,2.91,29.56,11.64,28.66,11-15.9,6.49-19.93-13-7.61-12.54,8.51S34.82,112,36.48,110.73s16.74-8.65,21.89-7.36,22.81,19.68,29.25,17.48,25-24.66,34.59-24.66,12.88,9.39,12.14,14.54-4.23,9.56-11.22,9.56-12-4.78-11.77-12.69,8.09-13.25,14-13.62,31.09,6.08,39.92,12.33,19.69,14,23.37,13.8,9-4.23,8.09-9.75,12.36-20.46,19.83-18.8,10.23,11.9,7.19,18.26-5.53,5.53-9.13,4.7-6.08-6.91-5.25-13.28,8.57-12.44,12.17-11.61,12.44,6.63,14.1,9.12"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 171.49 220.51"><defs><style>.draw{fill:none;stroke:#000;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M67,220c1.84-30.48,6.92-69.27,6-73.42s-1.14-8.89-3.93-8.24-17.41.86-23.65-1.94-15.9-12.89-15-20,4.08-13.76,11.82-12.68,23.86,12.68,26.22,19.56S37.5,107,30.84,99.44,5.9,59,3.11,48.07-1.62,32.59,4.83,33s12.25,3.22,19.34,11,44.5,68.14,47.29,75.88S64.8,110.4,57.28,81.17,54.05,43.77,56,38.39s6.87-13.11,10.1-14S72.75,21,77.7,29.36,91.88,67,90.38,79.23,83.07,117.71,80.49,122,85,83.53,96,68.27s29.45-31.81,35-33.53,14.41-5.16,20.43-3.66,7.73,2.8,6.23,12.26-15,41.48-20.64,46.43-37.18,32.67-45.35,36.75,12.68-14.18,27.94-18.91,44.71-7.31,50.09-5.16-7.31,13.11-13.55,15.91-21.71,10.53-27.94,11.17-27.08,5.59-33.32,4.95,19.56-4.3,29.88-.86,17,4.3,15.48,7.31-8,12-30.31,12-34-10.53-35.47-15.9.9-8.12-.25-10.06-4.45-12.24-4.57-17.27-.46-15.2,2.17-17.83,6.18-2.4,6.75-1.15.34,1.15-2.17,1.49-4.46,14.63-2.63,19.44a21.44,21.44,0,0,1,1,10.29c-.12.91,1.6,6.74,1.94,8.8s.11-2.06.23-5,3.2-17.84,1.71-23.44A142.67,142.67,0,0,1,75.6,83.78c-.12-2.29-.23-26.34-1.24-30.4S69,6.57,69,3s5.35-3,5.6-.25-1,27.72-.25,35.1,3.3,18.31,3.3,23.91.59,32.5,2.09,37.38.25,22.29-.25,26.55,7-22.29,10-27.93,14.36-18.55,15.15-22.86,3.32-29,3.32-34-2.54-14.49.2-14.68,6.26-2.55,5.28,1.17a48.6,48.6,0,0,0-1.95,11.75c-.2,4.89-3.14,27.2-4.51,34.64-.19,2.54,2.74-1.57,5.88-5.48s31.9-33.08,33.47-31.32,5.09,9.2,3.32,8.62-3.32-1.57-7.83,1.37-33.07,30.72-38.75,36.79-12.46,17-14.62,21.33-6.62,20.81-8.94,24.51,4.32-1.7,5.09-5.09S94.33,93,99,92.87s2,4.94-1.84,13.57-8.94,19.11-11,21-5.35,4.16-6.78,6,1.14,15-.14,20.82-4.63,32.07-4.85,37.39"/></svg>
+
       </div>
 </div>
   </body>
   <footer>
-    <a href="lettera.html"> ← lettre précédente </a> <a href="letterc.html">lettre suivante →</a>
+    <a href="letterr.html"> ← lettre précédente </a> <a href="lettert.html">lettre suivante →</a>
     </footer>
 
 </html>
