--- a/lettert.html
+++ b/lettert.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr" >
   <head>
     <meta charset="utf-8">
-    <title>B comme bleu roi</title>
+    <title>T comme terracotta</title>
     <link rel="stylesheet" href="css/masterletter.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
 
-  <body style="background-color:#4169E1">
+  <body style="background-color:#d07c50">
     <header>
       <div class="logo" onclick="location.href='abc.html'" style=cursor:pointer;>
         <div class="text-logo">
@@ -20,16 +20,16 @@
       </header>
     <div class="main--content">
   <div class="lettre">
-    <h1>B</h1>
-    <p>Le bleu roi est un bleu soutenu assez caractéristique.<br> Il était dédié aux uniformes de la garde rapprochée du roi à partir de 1563 avant de s’étendre à la Garde Nationale.<p>
+    <h1 class="light">T</h1>
+    <p class="light">Terracotta, terre cuite sont des noms de couleur en usage dans la décoration et la mode ainsi que parfois en description botanique pour désigner des teintes brunes, d'après celle des céramiques brutes (« terre cuite », terracotta en italien et en anglais), quand on ne veut pas faire allusion à la couleur de la brique.</p>
     </div>
     <div class="illu">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 247.47 168.91"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="abricot" d="M96.24,166.36c-31.67-.53-83.73-8.21-92.7-20.58-1.5-4.23-.45-3.62.45-4.23s-1.8-3.16-.75-4.52,1.36-6,.45-6.78-2.26-4.82.91-5c-.15-3.46,0-25.91,0-27.87-3-2.56-6.93-12.65-1.06-17.62-.15-6.93,3.32-59.65,3.62-62.37S6.56,9.59,7.91,7s2.26-3.31,3.32-3,.45,9.79-.31,11.14-.75,51.37,5.88,51.07c2.56-.15,20.35-22.38,23.46-38.6s6.22-12.44,6.44-13.78S39.37,1.19,50,.52s3.11,12.22,2.66,12.89,1.56,1.33,2,3.11S56.7,47,65.81,54.73s16.44,7.78,24,5.78,24-19.33,24.89-31.33.88-17.77,5.11-17.77c-2.89-5.33-2.67-10.89,4-10.89S130,9.41,128.24,11s1.77.44,2.44,4.88S140.23,51,146.45,55.62,164,66.29,176.89,58.07s13.77-42.44,16.44-42.88,1.78-1.34-.44-5.11-.23-8.89,4.22-8a6.51,6.51,0,0,1,4.44,9.55c-2,4,.89,2.89,1.78,4.67s8.88,54.21,23.77,52.87S237.32,23,237.76,21.41a2.4,2.4,0,0,1,3.78-1.11c1.11,1.11,2.44,59.54,2.44,62.43,2.23,2.22,3.34,7.1,2.89,10.66s-1.11,5.33-2.89,6.66c.23,6.67-1.11,25.77-.22,27.77s2.67,2,1.78,4.67A33,33,0,0,0,244,146.93c.67,7.33-60,25.39-136.48,20.71-3.18,0-1.24-4.06,5.12-3.7s105.6,1.64,128.7-16.27c1.51-1.51,1.18-2.85-1.34-1.34s-28.21,15.51-132.09,14S3.79,135.68,5.78,135.39s13.1,7.12,23.34,8.54,68,10,115.84,8.25,78.27-4.83,95.92-14.51c2.89-1.71,2.89-6.79-.67-4.93S186.38,147,117.9,146.5s-107.49-13-110.76-16.79,1.36-4.91,5.45-3.28,42.76,16,118.24,13.49,101.7-8.42,108.87-12.48c2.64-1.76,3.29-26.89,3.29-31.13s.81-22.52-2.29-19.75S229.61,81,224.64,53.69s-4.13-29.23-7.72-29.78c.28-3.31,4.14-8.83,1.1-12.14S207.27,6.26,208.1,14s4.41,8,3.31,10.48-5.52,23.16-8,32.26-10.48,30.34-26.48,31.17S135.84,62.79,133.64,44s-5.75-17-7.22-17.13-.88-4.13,1.18-4.57,5-12.73-3.35-12.57-11,8.46-5.26,13.88c1.43,1.76,1.75,4,.16,4s-4.15-1-5.59,12.92S94.26,83,87.08,84.43,67.78,91.29,56.3,80.6,39.55,49,40,41,41,25.09,38.27,24s-1.85-3.7-.62-3.95,3.45-2.34,2.47-6.9-3.21-5.79-5.18-5A6.23,6.23,0,0,0,31.12,16c1.48,4.43,1.48,6.77.5,7.39s-4.07,1.11-4.44,7.14S21.59,73.1,13.41,76.28c0,0-11.52,13.35-3.68,8.42s9.18-12.53,11.64-11.86.67,8.73-3.8,11.86,2.91,29.56,11.64,28.66,11-15.9,6.49-19.93-13-7.61-12.54,8.51S34.82,112,36.48,110.73s16.74-8.65,21.89-7.36,22.81,19.68,29.25,17.48,25-24.66,34.59-24.66,12.88,9.39,12.14,14.54-4.23,9.56-11.22,9.56-12-4.78-11.77-12.69,8.09-13.25,14-13.62,31.09,6.08,39.92,12.33,19.69,14,23.37,13.8,9-4.23,8.09-9.75,12.36-20.46,19.83-18.8,10.23,11.9,7.19,18.26-5.53,5.53-9.13,4.7-6.08-6.91-5.25-13.28,8.57-12.44,12.17-11.61,12.44,6.63,14.1,9.12"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 188.8 288.34"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M84.87,287.84c-12.62,0-28.35-3.88-33.12-12.31s-3.67-15.77,9.16-22.73c-5.49-12.1-28.23-65.63-31.16-75.53s-8.43-41.79-9.16-47.66-5.14-18.33-5.14-23.09-3.3-25.67-7-33.73S-5.44,33.56,5.19,22.56s22.36-15,28.59-12.46,4.4,4,9.17,4.76,11.73,6.6,12.1,8.8,5.5,30.8,3.3,36.66,1.46,7-5.5,11.37S47,80.12,41.12,83.05s-14.3,12.47-15.77,15.4c.74-9.53.37-16.86-2.56-23.1S12.15,44.92,13.25,38,18,21.09,26.09,20.36,37.82,19.63,41.85,24s7,24.56,9.53,28.23-.94,21,5.07,19.6,4.64-9.56,4.64-14.74-1.37-32.76-3.28-36S52.62,14,49.35,14,36.06,10.49,35.61,7.3,39,1.84,54.5,1.16s74.18-1.37,89.43.91,8.42,4.09-2.5,4.78-91,2-93.31,0-3.41-3,4.33-3.42,100-3.81,98.75,4.43-10,7.23-13.23,8-11.73,6.49-11.73,13.23-3,35.68,3.25,38.93c1.94,1.17,2.39.5.59-3.55s-3.82-29-1.57-33.48S135.25,12.54,155,11s27.84,12.44,30.64,16.3,3.85,25.92.7,32.93-15.06,37.13-15.06,45.54-3.16,7.7-3.16,11.56,1.41,15.06-2.1,15.41-5.6-24.87-4.2-29.43,9.11-33.28,13-41,7.36-35-5.25-38.89-29.78-2.8-34,13.31S136,65.26,133.8,68s-2.16,4.32,1.08,5.94a14.68,14.68,0,0,1,6.22,5.94c.81,1.62,14.31,9.46,18.09,19.72s7.3,32.69,2.71,52.4S140,217.6,136,224.63s-13.23,26.47-10.8,29.17,9.45,4.32,10,10.27,3.24,19.44-30,23.5"/></svg>
       </div>
 </div>
   </body>
   <footer>
-    <a href="lettera.html"> ← lettre précédente </a> <a href="letterc.html">lettre suivante →</a>
+    <a href="letters.html" class="light"> ← lettre précédente </a> <a href="letteru.html" class="light">lettre suivante →</a>
     </footer>
 
 </html>
