--- a/letterx.html
+++ b/letterx.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr" >
   <head>
     <meta charset="utf-8">
-    <title>B comme bleu roi</title>
+    <title>X comme xérès</title>
     <link rel="stylesheet" href="css/masterletter.css">
     <link rel="stylesheet" href="css/animationsvg.css">
   </head>
 
-  <body style="background-color:#4169E1">
+  <body style="background-color:#751109">
     <header>
       <div class="logo" onclick="location.href='abc.html'" style=cursor:pointer;>
         <div class="text-logo">
@@ -20,16 +20,16 @@
       </header>
     <div class="main--content">
   <div class="lettre">
-    <h1>B</h1>
-    <p>Le bleu roi est un bleu soutenu assez caractéristique.<br> Il était dédié aux uniformes de la garde rapprochée du roi à partir de 1563 avant de s’étendre à la Garde Nationale.<p>
+    <h1 class="light">X</h1>
+    <p class="light">Entre le marron et le rouge. Cette couleur est inspirée du vinaigre du même nom.</p>
     </div>
     <div class="illu">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 247.47 168.91"><defs><style>.abricot{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="abricot" d="M96.24,166.36c-31.67-.53-83.73-8.21-92.7-20.58-1.5-4.23-.45-3.62.45-4.23s-1.8-3.16-.75-4.52,1.36-6,.45-6.78-2.26-4.82.91-5c-.15-3.46,0-25.91,0-27.87-3-2.56-6.93-12.65-1.06-17.62-.15-6.93,3.32-59.65,3.62-62.37S6.56,9.59,7.91,7s2.26-3.31,3.32-3,.45,9.79-.31,11.14-.75,51.37,5.88,51.07c2.56-.15,20.35-22.38,23.46-38.6s6.22-12.44,6.44-13.78S39.37,1.19,50,.52s3.11,12.22,2.66,12.89,1.56,1.33,2,3.11S56.7,47,65.81,54.73s16.44,7.78,24,5.78,24-19.33,24.89-31.33.88-17.77,5.11-17.77c-2.89-5.33-2.67-10.89,4-10.89S130,9.41,128.24,11s1.77.44,2.44,4.88S140.23,51,146.45,55.62,164,66.29,176.89,58.07s13.77-42.44,16.44-42.88,1.78-1.34-.44-5.11-.23-8.89,4.22-8a6.51,6.51,0,0,1,4.44,9.55c-2,4,.89,2.89,1.78,4.67s8.88,54.21,23.77,52.87S237.32,23,237.76,21.41a2.4,2.4,0,0,1,3.78-1.11c1.11,1.11,2.44,59.54,2.44,62.43,2.23,2.22,3.34,7.1,2.89,10.66s-1.11,5.33-2.89,6.66c.23,6.67-1.11,25.77-.22,27.77s2.67,2,1.78,4.67A33,33,0,0,0,244,146.93c.67,7.33-60,25.39-136.48,20.71-3.18,0-1.24-4.06,5.12-3.7s105.6,1.64,128.7-16.27c1.51-1.51,1.18-2.85-1.34-1.34s-28.21,15.51-132.09,14S3.79,135.68,5.78,135.39s13.1,7.12,23.34,8.54,68,10,115.84,8.25,78.27-4.83,95.92-14.51c2.89-1.71,2.89-6.79-.67-4.93S186.38,147,117.9,146.5s-107.49-13-110.76-16.79,1.36-4.91,5.45-3.28,42.76,16,118.24,13.49,101.7-8.42,108.87-12.48c2.64-1.76,3.29-26.89,3.29-31.13s.81-22.52-2.29-19.75S229.61,81,224.64,53.69s-4.13-29.23-7.72-29.78c.28-3.31,4.14-8.83,1.1-12.14S207.27,6.26,208.1,14s4.41,8,3.31,10.48-5.52,23.16-8,32.26-10.48,30.34-26.48,31.17S135.84,62.79,133.64,44s-5.75-17-7.22-17.13-.88-4.13,1.18-4.57,5-12.73-3.35-12.57-11,8.46-5.26,13.88c1.43,1.76,1.75,4,.16,4s-4.15-1-5.59,12.92S94.26,83,87.08,84.43,67.78,91.29,56.3,80.6,39.55,49,40,41,41,25.09,38.27,24s-1.85-3.7-.62-3.95,3.45-2.34,2.47-6.9-3.21-5.79-5.18-5A6.23,6.23,0,0,0,31.12,16c1.48,4.43,1.48,6.77.5,7.39s-4.07,1.11-4.44,7.14S21.59,73.1,13.41,76.28c0,0-11.52,13.35-3.68,8.42s9.18-12.53,11.64-11.86.67,8.73-3.8,11.86,2.91,29.56,11.64,28.66,11-15.9,6.49-19.93-13-7.61-12.54,8.51S34.82,112,36.48,110.73s16.74-8.65,21.89-7.36,22.81,19.68,29.25,17.48,25-24.66,34.59-24.66,12.88,9.39,12.14,14.54-4.23,9.56-11.22,9.56-12-4.78-11.77-12.69,8.09-13.25,14-13.62,31.09,6.08,39.92,12.33,19.69,14,23.37,13.8,9-4.23,8.09-9.75,12.36-20.46,19.83-18.8,10.23,11.9,7.19,18.26-5.53,5.53-9.13,4.7-6.08-6.91-5.25-13.28,8.57-12.44,12.17-11.61,12.44,6.63,14.1,9.12"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 193.46 165.32"><defs><style>.draw{fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;}</style></defs><path class="draw" d="M44.82,164.82c-10.37-1.24-11.1-6-16.2-6.35S15.13,154.1,14.41,149,4.2,132.6,3.84,125.31-5.28,95.78,7.12,84.85,27.89,69.18,33,69.18s11.5.26,13.63,1.86-6.26,3-5.66,4.25,1.61,2.41.6,2.41-13.08,2.82-16.91,4.84,3.63-.61,8.86-1.81S43.78,77.5,46.2,77.5s6.84,2.22,8.86,2.42,4.83,1.21,7.65.6,4.83.61,9.26,4,13.69,22.75,13.29,33.83.8,13.69,1.21,11.88.8-17.92-1-23.36S79,87,74.59,84.15,64.12,78.51,62.3,78.51s-5-1.41-6.84-3,2-3.3-.87-7.22S43.26,54.76,48.7,41.68s8.94-20,14.6-21.79S69.84,14.23,77,14.23s13.07-.22,14.6.65,2,3.49,2,6.1-1.52,5-2.4,3.05-5.44-7-5.23-3.48,1.31,5.23-1.09,5.23-3.48,3.48-.87,3.7,7.85,0,9.16.87,5.44,4.8,7.19,4.8,7.4-1.09,7-4.36S99.47,28.61,99,24.9s.43-6.75,2-11.54S106.45.5,104.05.5,97.73,3.11,96.21,11s-3,9.61,4.6,8.08,8.48,2.89,13.57,3.9,13.23,9.84,13.23,13.41,1.19,6.27,1.19,7.8,1-3,6.45-3.39,8-.34,9.67-.34c.85-3.73,1-10.86,2.71-10.86s1.53,1.87,1,3.73-1.87,6.79-.68,7a86.21,86.21,0,0,1,9.5,1.53c3.22.84,6.45,5.42,9.16,6.27s7.13,5.77,10.18,7,10.85,1.83,12.09,11.28,5.22,13.68,3.73,20.9-3,19.15-9.7,23.38-8,10.2-12.93,10.2S163.53,126,156.57,126s-11.45.5-16.92-2-8-.25-13.93-2.74-19.89-9.2-20.39-14.92-5.72-11.94-5.72-19.4,2.24-22.39,5.47-26.12,9.7-12.93,15.17-12.93,11.19-1.49,11.44,1,7.46,10.45,9.21,10.45,9.95,1.74,11.44-2.49-5-18.65-4.73-13.68-1.74,5.23.25,7.46,4.73,6.22,1.49,6-8.45,0-10.44-4-3-5.72-5.48-6-8-1.24-10.19-1a21.55,21.55,0,0,0-13.93,7c-5,5.72-10,14.43-10.45,20.15s-1.49,15.17-4.48,10.95S82.2,70.77,72.74,71.27,62.05,75,62.05,75s-1.49.75,3.48-.5,10-1.74,13.43-.5,14.18,9,17.16,16.17,6.22,12.44,6.22,16.42,0,21.14-7.93,33.08-9.1,13.08-13.08,14.79S70.7,156.41,66,158.78s-11,5-13.15,5"/></svg>
       </div>
 </div>
   </body>
   <footer>
-    <a href="lettera.html"> ← lettre précédente </a> <a href="letterc.html">lettre suivante →</a>
+    <a href="letterw.html" class="light"> ← lettre précédente </a> <a href="lettery.html" class="light">lettre suivante →</a>
     </footer>
 
 </html>
